# travel_agent_ai

./: pyproject.toml
src/travel_agent_api/: main.py
src/travel_agent_api/routes/: chat_router.py
src/travel_agent_api/services/: agent_service.py
src/travel_agent_api/templates/: output_templates.py
src/travel_agent_api/tools/: chain_historical_expert.py  chain_travel_plan.py  flights_finder.py  hotels_finder.py
